--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.servlet.context-path=/todo-list-api
+
 spring.datasource.url=jdbc:mysql://localhost/projeto_todo_list?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
@@ -6,4 +8,7 @@ spring.datasource.password=1234
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create
+
+# chave para cricação dos tokens jwt
+security.jwt.key="dXNhbmRvIGp3dCBjb20gc3ByaW5n"
 
