Criada a classe UsuarioController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.servlet.context-path=/todo-list-api
+server.servlet.context-path=/todo-list
 
 spring.datasource.url=jdbc:mysql://localhost/projeto_todo_list?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
