adicionada a função de deletar entidades realacionadas com Cascade ALL do JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=1234
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # chave para cricação dos tokens jwt
 security.jwt.key="dXNhbmRvIGp3dCBjb20gc3ByaW5n"
