criado o arquivo de configurações de produção

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,6 @@
+spring.profiles.active=production
+
 server.servlet.context-path=/todo-list
-
-spring.datasource.url=jdbc:mysql://localhost/projeto_todo_list?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=1234
-
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
 
 # chave para cricação dos tokens jwt
 security.jwt.key="dXNhbmRvIGp3dCBjb20gc3ByaW5n"
